Fixed the headerlogin alignment issue

--- a/styles/redesignHeader/header.scss
+++ b/styles/redesignHeader/header.scss
@@ -423,3 +423,8 @@
 		line-height: 21px;
 	  }
 	}
+  #accountDropdown-button {
+    background-color: transparent;
+    border-color: transparent;
+    padding: 0;
+  }
